프로필 사진 수정

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 			.member h2{
 				padding-top: 30px; padding-left: 30px;
 			}
-			.m1{background: url(./images/eric.png) center;}
-			.m2{background: url(./images/minwoo.png) center;}
-			.m3{background: url(./images/dongwan.png) center;}
-			.m4{background: url(./images/hyesung.png) center;}
-			.m5{background: url(./images/jin.png) center;}
-			.m6{background: url(./images/andy.png) center;}
+			.m1{background: url(./images/eric.jpg.jpg) center;}
+			.m2{background: url(./images/minwoo.jpg.jpg) center;}
+			.m3{background: url(./images/dongwan.jpg.jpg) center;}
+			.m4{background: url(./images/hyesung.jpg.jpg) center;}
+			.m5{background: url(./images/jin.jpg.jpg) center;}
+			.m6{background: url(./images/andy.jpg.jpg) center;}
 				.m1:hover{background: url(./images/h_eric.gif) center;}
 				.m2:hover{background: url(./images/h_minwoo.gif) center;}
 				.m3:hover{background: url(./images/h_dongwan.gif) center;}
